# ansible-collections-openstack

./: .gitignore  .zuul.yaml  CHANGELOG.rst  CONTRIBUTING.rst  README.md  galaxy.yml  galaxy.yml.in  requirements.txt  setup.cfg  test-requirements-2.10.txt  test-requirements-2.11.txt  test-requirements-2.12.txt  test-requirements-2.9.txt  test-requirements.txt  tox.ini  zuul.yaml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 67576-os_coe_cluster-retrieve-id-uuid-correctly.yml  add_shard_key_field_for_baremetal_node.yaml  baremetal_port_group_module.yaml  coe_cluster_template_labels_comparison.yml  image_deactivate_reactivate.yml  openstack_inventory.yml
ci/: requirements.yml  run-ansible-tests-collection.sh  run-collection.yml
ci/playbooks/: get_amphora_tarball.yaml  postlog.yaml
ci/publish/: publish_collection.yml
contrib/: generate_module.sh  module_info_template.py.j2  module_template.py.j2  module_template_vars.yaml
docs/: branching.md  contributing.md  devstack.md  openstack_guidelines.rst  releasing.md  reviewing.md
meta/: action_groups.yml  routing.yml  runtime.yml
plugins/doc_fragments/: openstack.py
tests/: constraints-none.txt  constraints-openstacksdk-0.x.x.txt  constraints-openstacksdk-1.x.x.txt  requirements-ansible-2.11.txt  requirements-ansible-2.12.txt  requirements-ansible-2.16.txt  requirements-ansible-2.18.txt  requirements-ansible-2.19.txt  requirements-ansible-2.20.txt  requirements-ansible-2.9.txt  requirements.txt
tools/: build.py  check-import.sh  groups-to-routing.py  run-ansible-sanity.sh
(+349 files in other folders)
