[metadata]
name = ansible-collections-openstack.cloud
summary = Ansible collections for Openstack cloud
description_file =
    README.md

author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/ansible-collections-openstack/
classifier =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/openstack/cloud/ = README.md
    share/ansible/collections/ansible_collections/openstack/cloud/roles/ = roles/*
    share/ansible/collections/ansible_collections/openstack/cloud/plugins/ = plugins/*
    share/ansible/collections/ansible_collections/openstack/cloud/playbooks/ = playbooks/*
    share/ansible/collections/ansible_collections/openstack/cloud/scripts/ = scripts/*
    share/ansible/collections/ansible_collections/openstack/cloud/docs/ = docs/*
    share/ansible/collections/ansible_collections/openstack/cloud/meta/ = meta/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
